--- a/new.html
+++ b/new.html
@@ -8,7 +8,7 @@
     <link
   href="https://fonts.googleapis.com/css?family=Open+Sans"
   rel="stylesheet" />
-
+    <title>彭一洪</title>
   </head>
   <body>
     <h1>彭一洪的个人简介</h1>
