--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="styles.css" rel="stylesheet" />
+    <link href="./styles.css" rel="stylesheet" />
     <link
   href="https://fonts.googleapis.com/css?family=Open+Sans"
   rel="stylesheet" />
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>彭一洪的个人简介</h1>
-    <img src="touxiang.png" alt="头像" width="150"/>
+    <img src="./touxiang.png" alt="头像" width="150"/>
     <p>Some experiences:</p>
     <p>毕业于重庆市第八中学校,中学时对物理比较感兴趣。现就读于复旦大学计算机科学技术学院。</p>
     <ul>
